# deep-research-agent

./: .env.example  .gitignore  README.md  deep_research_technical_analysis.md  main.py  pyproject.toml  requirements.txt
app/: app_main.py
app/backend/: __init__.py
app/backend/config/: settings.py
app/backend/router/: __init__.py  health_router.py  research_router.py
app/backend/schemas/: __init__.py  research.py
app/backend/service/: __init__.py  workflow_service.py
app/mult_agents/: __init__.py  config.py  graph.py  main.py  nodes.py  nodes_copy.py  prompts.py  rag_core.py  state.py  tools.py
app/mult_agents/memory/: __init__.py  base.py  long_term.py  manager.py  short_term.py  utils.py
app/mult_agents/rag/: core.py  ingest.py
app/test/: bocha_api_test.py
front/agent_front/: README.md  package-lock.json  package.json  vite.config.ts
front/agent_front/src/: App.vue
front/agent_front/src/assets/: main.css
